Fix page rendering for small res. and zoom values
Change padding values of header container from absolute to relative.
Replace 'width' attribute of main containers to 'min-width'.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
                     <button type="button">Sign up</button>
                 </div>
             </div>
-            <img class="header-image" src="./images/header_image.jpg" alt="">
+            <div class="header-image">
+                <img src="./images/header_image.jpg" alt="">
+            </div>
         </div>        
     </div>
     <div class="inf-container">
