--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./images/favicon.png">
 </head>
 <body>
-    <div class="header-container">
+    <div class="header-section">
         <div class="header-top">
             <div class="logo">Header Logo</div>
             <ul class="links">
@@ -29,7 +30,7 @@
             </div>
         </div>        
     </div>
-    <div class="inf-container">
+    <div class="inf-section">
         <div class="inf-title">Some random information.</div>
         <ul class="inf-list-container">
             <li>
@@ -50,9 +51,23 @@
             </li>
         </ul>
     </div>
-    <div class="quote-container">
+    <div class="quote-section">
         <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
         <div class="quote-author">-Thor, God of Thunder</div>
+    </div>
+    <div class="action-section">
+        <div class="action-container">
+            <div class="action-text">
+                <div class="action-header">Call to action! It's time!</div>
+                <div class="action-subtext">Sign up for our products by clicking that button right over there!</div>
+            </div>
+            <div class="action-button">
+                <button type="button">Sign up</button>
+            </div>
+        </div>
+    </div>
+    <div class="footer-section">
+        <div class="footer-text">Copyright &copy; The Odin Project 2023</div>
     </div>
 </body>
 </html>
